--- a/arch/arm/boot/dts/at91-cosino.dtsi
+++ b/arch/arm/boot/dts/at91-cosino.dtsi
@@ -70,11 +70,27 @@
 				status = "okay";
 			};
 
+			pwm0: pwm@f8034000 {
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_pwm0>;
+				status = "okay";
+			};
+
 			pinctrl@fffff400 {
 				mmc0 {
 					pinctrl_board_mmc0: mmc0-board {
 						atmel,pins =
 							<AT91_PIOD 15 AT91_PERIPH_GPIO AT91_PINCTRL_PULL_UP_DEGLITCH>;	/* PD15 gpio CD pin pull up and deglitch */
+					};
+				};
+
+				pwm0 {
+					pinctrl_pwm0: pwm0-0 {
+						atmel,pins =
+							<AT91_PIOC 18 AT91_PERIPH_C AT91_PINCTRL_NONE
+							 AT91_PIOC 19 AT91_PERIPH_C AT91_PINCTRL_NONE
+							 AT91_PIOC 20 AT91_PERIPH_C AT91_PINCTRL_NONE
+							 AT91_PIOC 21 AT91_PERIPH_C AT91_PINCTRL_NONE >;
 					};
 				};
 			};
